[BE] - feat: build grafana-tempo

--- a/my_helms/keycloak/values.yaml
+++ b/my_helms/keycloak/values.yaml
@@ -1247,6 +1247,12 @@ keycloakConfigCli:
 ##
 postgresql:
   enabled: true
+  persistence:
+    enabled: true
+    storageClass: ""
+    accessModes:
+      - ReadWriteOnce
+    size: 1Gi
   auth:
     postgresPassword: ""
     username: bn_keycloak
