--- a/my_helms/keycloak/values.yaml
+++ b/my_helms/keycloak/values.yaml
@@ -342,13 +342,7 @@ resourcesPreset: "none"
 ##     cpu: 3
 ##     memory: 1024Mi
 ##
-resources:
- requests:
-   cpu: 2
-   memory: 256Mi
- limits:
-   cpu: 3
-   memory: 512Mi
+resources: {}
 ## Configure extra options for Keycloak containers' liveness, readiness and startup probes
 ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/#configure-probes
 ## @param livenessProbe.enabled Enable livenessProbe on Keycloak containers
@@ -1097,14 +1091,7 @@ keycloakConfigCli:
   ##   limits:
   ##     cpu: 3
   ##     memory: 1024Mi
-
-  resources:
-    requests:
-      cpu: 2
-      memory: 256Mi
-    limits:
-      cpu: 5
-      memory: 512Mi
+  resources: {}
   ## keycloak-config-cli containers' Security Context
   ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-container
   ## @param keycloakConfigCli.containerSecurityContext.enabled Enabled keycloak-config-cli Security Context
@@ -1249,7 +1236,7 @@ postgresql:
   enabled: true
   primary:
     persistence:
-      size: 3Gi
+      size: 1Gi
   auth:
     postgresPassword: ""
     username: bn_keycloak
