--- a/my_helms/backend-programming-learning-system-services/config-server/values.yaml
+++ b/my_helms/backend-programming-learning-system-services/config-server/values.yaml
@@ -10,7 +10,7 @@ hpaName: config-server-hpa
 replicaCount: 1
 
 image:
-  repository: com.backend.programming.learning.system/config.server.service
+  repository: com.backend.programming.learning.system/config.server
   tag: 1.0-SNAPSHOT
 
 containerPort: 9999
