--- a/my_helms/backend-programming-learning-system-services/config-server/values.yaml
+++ b/my_helms/backend-programming-learning-system-services/config-server/values.yaml
@@ -27,7 +27,7 @@ discovery_enabled: false
 eureka_instance_hostname_enabled: false
 resouceserver_enabled: false
 otel_enabled: true
-kafka_enabled: true
+kafka_enabled: false
 database_enabled: false
 resources_enabled: true
 redis_enabled: false
