--- a/my_helms/backend-programming-learning-system-services/discovery-service/values.yaml
+++ b/my_helms/backend-programming-learning-system-services/discovery-service/values.yaml
@@ -30,7 +30,7 @@ resouceserver_enabled: false
 otel_enabled: true
 kafka_enabled: false
 database_enabled: false
-resources_enabled: true
+resources_enabled: false
 redis_enabled: false
 
 autoscaling:
