--- a/my_helms/environments/dev-env/values.yaml
+++ b/my_helms/environments/dev-env/values.yaml
@@ -4,18 +4,18 @@ global:
   configServerURL: "http://config-server:9999"
   discoveryServerURL: "http://discovery-service:8761/eureka"
   keyCloakURL: http://keycloak.default.svc.cluster.local:80/realms/master/protocol/openid-connect/certs
-  openTelemetryJavaAgent: "-javaagent:/app/libs/opentelemetry-javaagent-1.32.0.jar"
+  openTelemetryJavaAgent: "-javaagent:/workspace/BOOT-INF/lib/opentelemetry-javaagent-1.32.0.jar"
   otelExporterEndPoint: http://tempo-grafana-tempo-distributor:4317
   otelMetricsExporter: none
   kafkaBootstrapServers: local-confluent-kafka-cp-kafka-headless:9092
   kafkaSchemaRegistryURL: http://local-confluent-kafka-cp-schema-registry:8081
-  springDatasourceHost: host.docker.internal
+  springDatasourceHost: aws-postgresql.ctso2e4midpm.ap-southeast-2.rds.amazonaws.com
   springDatasourcePort: 5432
   springDatasourceUsername: postgres
-  springDatasourcePassword: localdb
-  springDatasourceInitializationMode: always
+  springDatasourcePassword: postgresadmin
+  springDatasourceInitializationMode: never
   springDataRedisHost: redis-master
   springDataRedisPort: 6379
   springDataRedisPassword: admin
-  loggingLevelRoot: DEBUG
-  loggingLevelComBackendProgrammingLearningSystem: DEBUG
+  loggingLevelRoot: INFO
+  loggingLevelComBackendProgrammingLearningSystem: INFO
