--- a/my_helms/backend-programming-learning-system-services/discovery-service/values.yaml
+++ b/my_helms/backend-programming-learning-system-services/discovery-service/values.yaml
@@ -11,7 +11,7 @@ eurekaInstanceHostname: discovery-service
 replicaCount: 1
 
 image:
-  repository: com.backend.programming.learning.system/discovery.service
+  repository: khanhquang/discovery.service
   tag: 1.0-SNAPSHOT
 
 containerPort: 8761
