--- a/my_helms/backend-programming-learning-system-services/gateway-service/values.yaml
+++ b/my_helms/backend-programming-learning-system-services/gateway-service/values.yaml
@@ -10,7 +10,7 @@ hpaName: gateway-service-hpa
 replicaCount: 1
 
 image:
-  repository: com.backend.programming.learning.system/gateway.service
+  repository: khanhquang/gateway.service
   tag: 1.0-SNAPSHOT
 
 containerPort: 9098
