--- a/my_helms/environments/dev-env/values.yaml
+++ b/my_helms/environments/dev-env/values.yaml
@@ -13,7 +13,7 @@ global:
   springDatasourcePort: 5432
   springDatasourceUsername: postgres
   springDatasourcePassword: postgresadmin
-  springDatasourceInitializationMode: always
+  springDatasourceInitializationMode: never
   springDataRedisHost: redis-13960.c9.us-east-1-2.ec2.redns.redis-cloud.com
   springDataRedisPort: 13960
   springDataRedisPassword: N7qkA39hffMIU9B99uFjAptksNmt1ALG
